Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,20 +34,44 @@
           <h1>
 <a id="python-and-pandas-notes" class="anchor" href="#python-and-pandas-notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python and Pandas notes</h1>
 
-<p>While learning the ropes using Python and Pandas, I have had to experiment with various topics and sometimes discovered a lot of surprising features. I will keep a list of notes with examples here. </p>
+<p>While learning the ropes using Python and Pandas, I will keep a list of notes with examples here. </p>
 
 <h2>
-<a id="what-is-here" class="anchor" href="#what-is-here" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is here</h2>
+<a id="scipy" class="anchor" href="#scipy" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scipy</h2>
 
 <ul>
-<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Curve%20Fitting%20with%20SciPy.ipynb">SciPy: curve_fit</a></li>
-<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Pandas%20understanding%20apply.ipynb">Pandas: apply</a></li>
-<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Concatenate%20DataFrames.ipynb">Pandas: concat</a></li>
-<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Pandas%20notnull.ipynb">Pandas: notnull</a></li>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Curve%20Fitting%20with%20SciPy.ipynb">curve_fit</a></li>
+</ul>
+
+<h2>
+<a id="pandas" class="anchor" href="#pandas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pandas</h2>
+
+<ul>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Concatenate%20DataFrames.ipynb">concat</a></li>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Pandas%20notnull.ipynb">notnull</a></li>
 <li>
-<a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Pandas%20Removing%20outliers.ipynb">Pandas: Outliers</a> </li>
+<a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Pandas%20Removing%20outliers.ipynb">Removing Outliers</a> </li>
 <li>
-<a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/TimeSeries.ipynb">Pandas: TimeSeries</a> </li>
+<a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/TimeSeries.ipynb">TimeSeries</a> </li>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Pandas%20understanding%20apply.ipynb">Understanding apply</a></li>
+</ul>
+
+<h2>
+<a id="python" class="anchor" href="#python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python</h2>
+
+<ul>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Beautifulsoup.ipynb">Beautifulsoup module</a></li>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Logging.ipynb">Logging</a></li>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/regular%20expression.ipynb">RegEx intro</a></li>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Requests%20module.ipynb">requests module</a></li>
+</ul>
+
+<h2>
+<a id="pyplot" class="anchor" href="#pyplot" aria-hidden="true"><span class="octicon octicon-link"></span></a>PyPlot</h2>
+
+<ul>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Differently%20sized%20subplots.ipynb">Diffrent sized subplots</a></li>
+<li><a href="http://nbviewer.ipython.org/github/tbrams/py_notes/blob/master/Properly%20placing%20a%20title%20on%20a%20large%20plot.ipynb">Prpper placement of title</a></li>
 </ul>
         </section>
 
